# mlds-mlops

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  environment.yaml  infer.py  models.dvc  pyproject.toml  setup.cfg  train.py
.dvc/: config
configs/: config.yaml
data/: .gitignore  all_rooms_combined.csv.dvc  predictions.csv.dvc
mlds_mlops/: __init__.py  utils.py
models/: .gitignore  rf_regressor.onnx.dvc  transformer.joblib.dvc
