[tool.poetry]
name = "mlds-mlops"
version = "0.1.0"
description = "MLOps study project for MLOps Course @ HSE MLDS Program"
authors = ["Maksim Ozerov <mvozerov@edu.hse.ru>"]
readme = "README.md"
packages = [{include = "mlds_mlops"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
